hyperkitty (1.1.4-3) unstable; urgency=medium

  * d/tests/control: Add test command 'django-admin test'.

 -- Jonas Meurer <jonas@freesources.org>  Sat, 23 Dec 2017 23:31:21 +0100

hyperkitty (1.1.4-2) unstable; urgency=medium

  * debian/copyright: Add missing copyright statement for bootstrap.
    Thanks to Chris Lamb for the hint.
  * debian/control: Bump standards-version to 4.1.2, no changes
    needed.

 -- Jonas Meurer <mejo@debian.org>  Mon, 11 Dec 2017 08:20:12 +0100

hyperkitty (1.1.4-1) unstable; urgency=medium

  [ Pierre-Elliott Bécue ]
  * Initial release (Closes: #799287)

  [ Jonas Meurer ]
  * Import upstream versions 1.1.1 and 1.1.4.

 -- Jonas Meurer <mejo@debian.org>  Sun, 15 Oct 2017 13:02:29 +0200