@@ -7,7 +7,26 @@ Uploaders: Pierre-Elliott Bécue <becue@crans.org>,
 Build-Depends: debhelper (>= 10),
                dh-python,
                python-all,
+               python-bs4,
+               python-django,
+               python-django-compressor,
+               python-django-extensions,
+               python-django-haystack,
+               python-django-gravatar2,
+               python-django-mailman3,
+               python-django-paintstore,
+               python-django-q,
+               python-djangorestframework,
+               python-enum34,
+               python-lockfile,
+               python-mailmanclient,
+               python-mock,
+               python-networkx,
+               python-rjsmin,
+               python-robot-detection,
                python-setuptools,
+               python-tz,
+               python-whoosh,
                python3-sphinx
 Standards-Version: 4.1.2
 Homepage: https://gitlab.com/mailman/hyperkitty
@@ -22,6 +41,7 @@ Depends: fonts-font-awesome,
          python-cssmin,
          python-django,
          python-dateutil,
+         python-django,
          python-django-compressor,
          python-django-extensions,
          python-django-haystack,
