@@ -1,8 +1,9 @@
 hyperkitty (1.1.4-3) unstable; urgency=medium
 
   * d/tests/control: Add test command 'django-admin test'.
+  * d/rules: Run 'django-admin test' as build-time test.
 
- -- Jonas Meurer <jonas@freesources.org>  Sat, 23 Dec 2017 23:31:21 +0100
+ -- Jonas Meurer <jonas@freesources.org>  Sun, 24 Dec 2017 00:05:33 +0100
 
 hyperkitty (1.1.4-2) unstable; urgency=medium
 
